# custom

./: README.md  pyproject.toml  requirements.txt  setup.py
custom/: hooks.py  modules.txt  patches.txt
custom/custom_extensions/: __init__.py
custom/fixtures/: custom_field.json
custom/patches/v0_0_1/: add_custom_pos_section_to_pos_profile.py
custom/patches/v0_0_2/: remove_custom_pos_section_and_move_toggle.py
custom/public/js/: custom_pos_list_view.js
