[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "custom"
authors = [
    { name = "Custom", email = "dev@example.com" }
]
description = "Custom ERPNext POS extensions"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
]

[project.urls]
Homepage = "https://example.com/custom"
