[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "custom"
authors = [
    { name = "Custom", email = "dev@example.com" }
]
description = "Custom ERPNext POS extensions"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "frappe",
]

[project.urls]
Homepage = "https://example.com/custom"
